# dcplayer

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  TREE.txt  manifest.json
.codex/: config.toml
apps/dcp_probe/: CMakeLists.txt  main.cpp
apps/playout_service/: CMakeLists.txt  main.cpp
apps/sms_ui/: CMakeLists.txt  main.cpp
apps/tms_web/: CMakeLists.txt  main.cpp
archive/: AGENTS_TEMPLATES_ALL.md  STATUS.md  dcplayer_PLAN_rewrite_ru.md
docs/: ARCHITECTURE.md  CODE_STYLE.md  IMPLEMENT.md  LIBRARIES.md  PLAN.md  STATUS.md
docs/adr/: 0001-security-boundary.md  0002-host-spb1-contract.md  0003-watermark-control-model.md  0004-audio-roadmap-aes3.md  README.md
docs/templates/: CODEX_REPORT.md
scripts/: README.md  bootstrap.sh  build.sh  format.sh  preset_env.sh  smoke.sh  test.sh  update_repo_maps.py
sources/: GIT PUSH.md  JPEG2000_Part1_DCI_cheatsheet_ru.md
spb1/: CMakeLists.txt
spb1/api/: CMakeLists.txt
spb1/diag/: CMakeLists.txt
spb1/firmware/: CMakeLists.txt
spb1/simulator/: CMakeLists.txt
specs/objects/: AES3DeviceProfile.md  AssetMap.md  AuditExport.md  CPL.md  CertificateStore.md  ChannelRouteMap.md  CompositionGraph.md  DetectorReport.md  FaultMatrix.md  FrameSurface.md  HsmDecryptSession.md  J2KBackendContract.md  KDMEnvelope.md  KDMValidationResult.md  OperatorAlert.md  PKL.md  PlaybackSession.md  PlaybackTimeline.md  ProtectedApiEnvelope.md  README.md  Reel.md  ScheduleEntry.md  SecureChannelContract.md  SecureClockPolicy.md  SecurityEvent.md  SecurityModuleContract.md  ShowControlCommand.md  SubtitleCue.md  SupplementalMergePolicy.md  TimedTextDocument.md  TrackFile.md  TrustChain.md  WatermarkEvidence.md  WatermarkPayload.md  WatermarkState.md
src/audio/: CMakeLists.txt
src/audio/aes3_adapter/: CMakeLists.txt
src/audio/channel_router/: CMakeLists.txt
src/audio/pcm_engine/: CMakeLists.txt
src/core/: CMakeLists.txt  version.cpp  version.hpp
src/dcp/: CMakeLists.txt
src/dcp/assetmap/: CMakeLists.txt  asset_map.cpp  asset_map.hpp
src/dcp/assetmap/internal/: xml_dom.cpp  xml_dom.hpp
src/dcp/cpl/: CMakeLists.txt  composition_playlist.cpp  composition_playlist.hpp
src/dcp/ov_vf_resolver/: CMakeLists.txt  ov_vf_resolver.cpp  ov_vf_resolver.hpp
src/dcp/pkl/: CMakeLists.txt  packing_list.cpp  packing_list.hpp
src/dcp/supplemental/: CMakeLists.txt  supplemental_merge.cpp  supplemental_merge.hpp
src/ingest/: CMakeLists.txt
src/playout/: CMakeLists.txt
src/playout/frame_queue/: CMakeLists.txt
src/playout/sync/: CMakeLists.txt
src/playout/timeline/: CMakeLists.txt  playback_timeline.cpp  playback_timeline.hpp
src/security_api/: CMakeLists.txt
src/security_api/audit/: CMakeLists.txt  audit.cpp  audit.hpp
src/security_api/certs/: CMakeLists.txt  certificate_store.cpp  certificate_store.hpp  trust_chain.cpp  trust_chain.hpp
src/security_api/host_spb1_contract/: CMakeLists.txt  host_spb1_contract.hpp
src/security_api/kdm/: CMakeLists.txt
src/security_api/link_crypto/: CMakeLists.txt
src/security_api/log_client/: CMakeLists.txt
src/security_api/secure_channel/: CMakeLists.txt  secure_channel.cpp  secure_channel.hpp
src/security_api/secure_time/: CMakeLists.txt  secure_time.cpp  secure_time.hpp
src/storage/: CMakeLists.txt
src/subtitles/: CMakeLists.txt
src/video/: CMakeLists.txt
src/video/j2k_cpu/: CMakeLists.txt
src/video/j2k_gpu_open/: CMakeLists.txt
src/video/secure_decode_adapter/: CMakeLists.txt
src/watermark/: CMakeLists.txt
src/watermark/detector_harness/: CMakeLists.txt
src/watermark/fm_backend_api/: CMakeLists.txt
src/watermark/fm_control/: CMakeLists.txt
tasks/: INDEX.md  README.md
tasks/T00a-bootstrap/: AGENTS.md
tasks/T00b-specs/: AGENTS.md
tasks/T00c-memory/: AGENTS.md
tasks/T01a-assetmap-pkl/: AGENTS.md
tasks/T01b-cpl/: AGENTS.md
tasks/T01c-probe-graph/: AGENTS.md
tasks/T02a-ov-vf/: AGENTS.md
tasks/T02b-supplemental/: AGENTS.md
tasks/T02c-timeline/: AGENTS.md
tasks/T03a-pki/: AGENTS.md
tasks/T03b-pi-zymkey/: AGENTS.md
tasks/T03c-acl-api/: AGENTS.md
tasks/T03d-audit-tamper/: AGENTS.md
tasks/T03e-secure-time/: AGENTS.md
tasks/T04a-security-module/: AGENTS.md
tasks/T04b-kdm-binding/: AGENTS.md
tasks/T04c-fail-closed/: AGENTS.md
tasks/T04d-event-export/: AGENTS.md
tasks/T05a-j2k-backend/: AGENTS.md
tasks/T05b-cpu-decoder/: AGENTS.md
tasks/T05c-gpu-contract/: AGENTS.md
tasks/T05d-nvidia/: AGENTS.md
tasks/T06a-watermark-model/: AGENTS.md
tasks/T06b-detector/: AGENTS.md
tasks/T06c-picture-fm/: AGENTS.md
tasks/T06d-fm-integration/: AGENTS.md
tasks/T06e-sound-fm/: AGENTS.md
tasks/T07a-pcm-routing/: AGENTS.md
tasks/T07b-audio-sync/: AGENTS.md
tasks/T07c-aes3/: AGENTS.md
tasks/T07d-interop-subtitles/: AGENTS.md
tasks/T07e-smpte-text/: AGENTS.md
tasks/T08a-open-playout/: AGENTS.md
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/integration/audio/: CMakeLists.txt
tests/integration/dcp/: CMakeLists.txt
tests/integration/dcp/ov_vf/: CMakeLists.txt  ov_vf_integration_test.cpp
tests/integration/dcp/supplemental/: CMakeLists.txt  supplemental_merge_integration_test.cpp
tests/integration/dcp_probe/: CMakeLists.txt
tests/integration/playout/: CMakeLists.txt
tests/integration/playout/open/: CMakeLists.txt
tests/integration/playout/timeline/: CMakeLists.txt  playback_timeline_integration_test.cpp
tests/integration/security/: CMakeLists.txt
tests/integration/sms/: CMakeLists.txt
tests/integration/timeline/: CMakeLists.txt
tests/integration/tms/: CMakeLists.txt
tests/integration/video/: CMakeLists.txt
tests/integration/watermark/: CMakeLists.txt
tests/unit/core/: CMakeLists.txt  core_version_test.cpp
tests/unit/dcp/assetmap/: CMakeLists.txt  asset_map_test.cpp
tests/unit/dcp/cpl/: CMakeLists.txt  cpl_test.cpp
tests/unit/dcp/ov_vf_resolver/: CMakeLists.txt  ov_vf_resolver_test.cpp
tests/unit/dcp/pkl/: CMakeLists.txt  packing_list_test.cpp
tests/unit/dcp/supplemental/: CMakeLists.txt  supplemental_merge_test.cpp
(+282 files in other folders)
