add_subdirectory(dcp_probe)
add_subdirectory(dcp)
add_subdirectory(security)
add_subdirectory(video)
add_subdirectory(audio)
add_subdirectory(audio_sync)
add_subdirectory(playout)
add_subdirectory(secure_playback)
add_subdirectory(watermark)
add_subdirectory(sms)
add_subdirectory(tms)
add_subdirectory(timeline)
add_subdirectory(ops_audit)
